@@ -3,6 +3,7 @@
 * Offer to switch from Facing to Reverse after scanning double-sided pages.
   Closes feature request #100
 * + Edit profile functionality to scan dialog.
+* Reset scan options to defaults before applying profile
 * + Split screen view for image and OCR output.
   Closes feature request #57 (Ability to view OCR output and Image at same time)
 * Switched to GIMP-like controls - LMB for selecting and MMB for panning.
